cabal-version: 3.0
name: pnet
version: 0.1.0.0
author: indiscrete_void
maintainer: indiscrete.void@gmail.com
license: AGPL-3.0-only

flag pedantic

common default
    build-depends: base ^>=4.17.2.1, bytestring, cereal, unix, network, polysemy, polysemy-conc, polysemy-plugin, polysemy-transport, optparse-applicative, extra, random, data-dword
    default-language: Haskell2010
    default-extensions:
        DataKinds FlexibleContexts GADTs LambdaCase PolyKinds RankNTypes
        ScopedTypeVariables TypeApplications TypeOperators TypeFamilies
        ImportQualifiedPost AllowAmbiguousTypes TemplateHaskell BlockArguments
        DeriveGeneric DerivingStrategies EmptyDataDeriving OverloadedStrings
        FlexibleInstances
    ghc-options:
        -fdefer-typed-holes -Weverything -Wno-missing-safe-haskell-mode
        -Wno-safe -Wno-unsafe -Wno-missing-import-lists
        -Wno-all-missed-specialisations -Wno-missed-specialisations
        -Wno-missing-local-signatures -Wno-monomorphism-restriction
        -Wno-implicit-prelude -threaded -Wno-missing-kind-signatures
        -fplugin=Polysemy.Plugin -Wno-orphans
    if flag(pedantic)
        ghc-options: -Werror -threaded

library
    import: default
    hs-source-dirs: common
    exposed-modules: Polysemy.Socket, Polysemy.Sockets, Polysemy.Socket.Accept, Polysemy.Conc.Input, Pnet, Pnet.Routing, Pnet.Daemon.Node, Pnet.Daemon.Server, Pnet.Daemon, Pnet.Client

executable pnetd
    import: default
    hs-source-dirs: daemon
    main-is: Pnet/Main.hs
    build-depends: pnet
    other-modules: Pnet.Options

executable pnet
    import: default
    hs-source-dirs: cli
    main-is: Pnet/Main.hs
    build-depends: pnet, base58-bytestring
    other-modules: Pnet.Options

test-suite tests
    import: default
    main-is: Main.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    build-depends:
        pnet,
        tasty,
        tasty-hunit,
