cabal-version: 3.0
name: r2
version: 0.1.0.0
author: indiscrete_void
maintainer: indiscrete.void@gmail.com
license: AGPL-3.0-only

flag pedantic

common default
    build-depends: base >=4.17.2.1 && <5, polysemy-transport, bytestring, cereal, unix, network, polysemy, polysemy-plugin, polysemy-scoped-process, optparse-applicative, extra, random, data-dword, base58-bytestring
    default-language: Haskell2010
    default-extensions:
        DataKinds FlexibleContexts GADTs LambdaCase PolyKinds RankNTypes
        ScopedTypeVariables TypeApplications TypeOperators TypeFamilies
        ImportQualifiedPost AllowAmbiguousTypes TemplateHaskell BlockArguments
        DeriveGeneric DerivingStrategies EmptyDataDeriving OverloadedStrings
        FlexibleInstances QuantifiedConstraints IncoherentInstances StandaloneKindSignatures
        DerivingVia
    ghc-options:
        -fdefer-typed-holes -Weverything -Wno-missing-safe-haskell-mode
        -Wno-safe -Wno-unsafe -Wno-missing-import-lists
        -Wno-all-missed-specialisations -Wno-missed-specialisations
        -Wno-missing-local-signatures -Wno-monomorphism-restriction
        -Wno-implicit-prelude -threaded -Wno-missing-kind-signatures
        -fplugin=Polysemy.Plugin -Wno-orphans -threaded
        -Wno-name-shadowing
    if flag(pedantic)
        ghc-options: -Werror

library
    import: default
    hs-source-dirs: src
    exposed-modules:
        Polysemy.Socket,
        Polysemy.Sockets,
        Polysemy.Sockets.Any,
        Polysemy.Socket.Accept,
        R2,
        Polysemy.R2,
        R2.Options.Parse,
        R2.Routing,
        R2.Daemon,
        R2.Client

executable r2d
    import: default
    hs-source-dirs: daemon
    main-is: R2/Main.hs
    build-depends: r2
    other-modules: R2.Options

executable r2
    import: default
    hs-source-dirs: cli
    main-is: R2/Main.hs
    build-depends: r2
    other-modules: R2.Options

test-suite tests
    import: default
    main-is: Main.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    build-depends:
        r2,
        tasty,
        tasty-hunit,
